--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Artem Nikolaiev",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "slugify": "^1.3.6"
   },
   "optionalDependencies": {
     "win-node-env": "^0.4.0"
