--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "author": "Artem Nikolaiev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
-    "slugify": "^1.3.6"
+    "multer": "^1.4.2",
+    "sharp": "^0.24.1",
+    "slugify": "^1.3.6",
+    "validator": "^12.2.0"
   },
   "optionalDependencies": {
     "win-node-env": "^0.4.0"
